--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -2,9 +2,9 @@
   <ul class="nav nav-pills nav-justified">
     <li class="nav-item" *ngFor="let step of steps; let i = index">
       <button
-      (click)="onClick(i)"
-      [class.active]="selectedIndex === i"
-        class="nav-link py-3 text-uppercase font-weight-bold btn-block">
+        (click)="onClick(i)"
+        [class.active]="selectedIndex === i"
+        class="nav-link text-uppercase font-weight-bold btn-block" style="padding: 1.20em;">
         {{step.label}}:{{step.completed}}
       </button>
     </li>
